finished landing page and hw2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <nav>
             <a href="https://github.com/bilalv14">GitHub</a>
-            <a href="https://github.com/bilalv14/csc372-hw">CSC372 Homework</a>
+            <a href="https://bilalv14.github.io/csc372-hw/hw2/index.html">CSC372 Homework</a>
         </nav>
 
         <div class="content">
