--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="container">
         <nav>
             <a href="https://github.com/bilalv14">GitHub</a>
-            <a href="https://bilalv14.github.io/csc372-hw/hw2/index.html">CSC372 Homework</a>
+            <a href="https://bilalv14.github.io/csc372-hw/hw2/index.html">CSC372 Homework 2</a>
+            <a href="https://bilalv14.github.io/csc372-hw/hw3/index.html">CSC372 Homework 3</a>
         </nav>
 
         <div class="content">
