--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://github.com/bilalv14">GitHub</a>
             <a href="https://bilalv14.github.io/csc372-hw/hw2/index.html">CSC372 Homework 2</a>
             <a href="https://bilalv14.github.io/csc372-hw/hw3/index.html">CSC372 Homework 3</a>
+            <a href="https://bilalv14.github.io/csc372-hw/hw4/index.html">CSC372 Homework 4</a>
         </nav>
 
         <div class="content">
